#lib_LIBRARIES = libksp
#libksp_a_SOURCES =
include_HEADERS = \
algo/dijkstra.hpp \
algo/sp_range_query.hpp \
algo/topological_sort.hpp \
algo/vertex_weighted_matching.hpp \
io/graph_io.hpp \
adjacency_list.hpp \
edge.hpp \
edge_map.hpp \
graph_builder.hpp \
shortest_path_tree.hpp \
vertex.hpp \
vertex_map.hpp

lib_LIBRARIES = libksp.a
libksp_a_SOURCES = \
util/string_utils.cpp \
edge.cpp \
vertex.cpp \
vertex.hpp
