AM_CXXFLAGS = -Werror
lib_LIBRARIES = libksp.a
include_HEADERS = \
algo/dijkstra.hpp \
algo/sp_range_query.hpp \
algo/topological_sort.hpp \
algo/vertex_weighted_matching.hpp \
io/graph_io.hpp \
adjacency_list.hpp \
edge.hpp \
edge_map.hpp \
graph_builder.hpp \
shortest_path_tree.hpp \
vertex.hpp \
vertex_map.hpp
libksp_a_SOURCES = \
util/string_utils.cpp \
edge.cpp \
vertex.cpp \
vertex.hpp
